@@ -6,7 +6,7 @@
       <implementation>org.apache.maven.lifecycle.mapping.DefaultLifecycleMapping</implementation>
       <configuration>
         <phases>
-          <validate>net.xp-forge.maven.plugins:xp-maven-plugin:validate</validate>
+          <initialize>net.xp-forge.maven.plugins:xp-maven-plugin:initialize</initialize>
           <process-resources>org.apache.maven.plugins:maven-resources-plugin:resources</process-resources>
           <process-test-resources>org.apache.maven.plugins:maven-resources-plugin:testResources</process-test-resources>
           <compile>net.xp-forge.maven.plugins:xp-maven-plugin:compile</compile>
@@ -25,7 +25,7 @@
       <implementation>org.apache.maven.lifecycle.mapping.DefaultLifecycleMapping</implementation>
       <configuration>
         <phases>
-          <validate>net.xp-forge.maven.plugins:xp-maven-plugin:validate</validate>
+          <initialize>net.xp-forge.maven.plugins:xp-maven-plugin:initialize</initialize>
           <process-resources>org.apache.maven.plugins:maven-resources-plugin:resources</process-resources>
           <process-test-resources>org.apache.maven.plugins:maven-resources-plugin:testResources</process-test-resources>
           <compile>net.xp-forge.maven.plugins:xp-maven-plugin:compile</compile>
